[package]
name = "iotscape"
version = "0.3.1"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
description = "Library for creating IoTScape services for NetsBlox in Rust"
homepage = "https://github.com/gsteinLTU/iotscape-rs"
repository = "https://github.com/gsteinLTU/iotscape-rs"

[lib]
name = "iotscape"
crate-type = ["lib"]

[dependencies]
log = "0.4.20"
no-std-net = "0.6.0"
serde = { version = "1.0", default-features = false , features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
simple_logger = "4.2.0"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
std = []
default = ["std"]
