[package]
name = "iotscape"
version = "0.5.0"
edition = "2021"
authors = ["Gordon Stein"]
license = "MIT OR Apache-2.0"
description = "Library for creating IoTScape services for NetsBlox in Rust"
homepage = "https://github.com/gsteinLTU/iotscape-rs"
repository = "https://github.com/gsteinLTU/iotscape-rs"

[lib]
name = "iotscape"
crate-type = ["lib"]

[dependencies]
log = "0.4"
no-std-net = "0.6"
serde = { version = "1.0", default-features = false , features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
tokio = { version = "1", default-features = false, features = ["net"], optional = true }
futures = { version = "0.3", default-features = false, optional = true }
no_deadlocks = { version = "1.3", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[features]
std = []
tokio = ["std", "dep:tokio", "dep:futures"]
# Use the `no_deadlocks` feature to enable the `no_deadlocks` crate for detecting deadlocks
no_deadlocks = ["std", "dep:no_deadlocks"]
default = ["std"]
